# bioinf-news

./: .gitignore  Cargo.toml  README.md  TODO.md
backend/: Cargo.toml
backend/src/: arguments.rs  article.rs  database.rs  elsevier_data.rs  lib.rs  main.rs  models.rs  record.rs  springer_data.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css  index.js  style.css
frontend/src/components/: AppLayout.js  Article.js  ArticleBody.js  ArticleHeading.js  ArticleList.js  AuthorList.js  FilterBar.js  Footer.js  Header.js  KeywordList.js  KeywordSelect.js  RandomArticle.js  RandomArticleButton.js  SearchBar.js
frontend/src/pages/: ArticlesPage.js  RandomArticle.js
