[package]
name = "backend"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.16", features = ["macros"] }
reqwest = "0.11.16"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = "0.4.0"
mongodb = "2.5.0"
