[package]
name = "backend"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.16", features = ["macros"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = "0.4.0"
mongodb = "2.5.0"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
dotenv = "0.15.0"
chrono = "0.4.24"
